@@ -4,8 +4,11 @@
  - Introduce new online documentation at http://shapeout.readthedocs.io
  - Consistently use the term Shape-Out
  - Code cleanup and compatibility with dclab 0.8.0
- - Bugfix: Displaying the contour of .rtdc files that do not contain
-   the "mask" feature resulted in an error.
+ - Bugfixes:
+   - Displaying the contour of .rtdc files that do not contain
+     the "mask" feature resulted in an error.
+   - ValueError in settings.py when stored data does not contain a
+     key-value pair or when the value is missing.
 0.8.8
  - Bugfixes:
    - "Mean of empty slice" error when attempting to plot bad data 
